--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <section class="nav">
+        <div class="deploy_input"></div>
+        <div class="attack_input"></div>
+      </section>
+      <section class="gameboard">
+        <div class="player_board"></div>
+        <div class="computer_board"></div>
+      </section>
+    </div>
+  </body>
 </html>
