--- a/src/template.html
+++ b/src/template.html
@@ -6,15 +6,6 @@
     <title>Battleship</title>
   </head>
   <body>
-    <div class="wrapper">
-      <section class="nav">
-        <div class="deploy_input"></div>
-        <div class="attack_input"></div>
-      </section>
-      <section class="gameboard">
-        <div class="player_board"></div>
-        <div class="computer_board"></div>
-      </section>
-    </div>
+    <div class="wrapper"></div>
   </body>
 </html>
